# AI4Paper02

./: .gitignore  README.md  build_and_fix_icon.ps1  cd.md  changed_files_abs_paths.txt  gen_icons.mjs  package-lock.json  upload_changed_files.ps1
.cursor/: mcp.json
.cursor/rules/: alberto-brandolini-review-cursor.mdc  brad-frost-review-cursor.mdc  guillermo-rauch-review-cursor.mdc  jakob-nielsen-review-cursor.mdc  john-cutler-review-v2.mdc  julie-zhuo-review-cursor.mdc  luke-wroblewski-review.mdc  patrick-campbell-review.mdc  persistent-chat-cursor.mdc  persistent-chat.mdc  sam-newman-review-cursor.mdc  simon-brown-review-cursor.mdc  top-web-designers-cursor-rule.mdc
Sever/: .gitignore  api.py  app.py  format.py  init_admin.py  md2json.py  migrate_and_cleanup.py  migrate_file_to_db.py  requirements.txt
Sever/Controller/: arxiv_search04.py  cleanup.py  file_collect.py  idea_combine.py  idea_compound.py  idea_ingest.py  idea_review.py  instutions_filter.py  llm_select_theme.py  paper_assets.py  paper_summary.py  (+10 more)
View/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/: .env.production  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
exe/: .env  .env.production  .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
exe/src-tauri/: Cargo.toml  tauri.conf.json
exe/src-tauri/capabilities/: default.json
exe/src-tauri/src/: lib.rs
mobile_new/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
nginx/: arxivpaper4.conf
shared/: tsconfig.json
(+525 files in other folders)
