[package]
name = "ai4papers-desktop"
version = "0.1.0"
description = "AI4Papers Desktop App"
authors = []
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
reqwest = { version = "0.12", default-features = false, features = ["native-tls", "charset", "multipart", "stream"] }
base64 = "0.22"
futures-util = "0.3"
